crates/ty_python_semantic/resources/mdtest/snapshots/unsafe_tuple_subclas…_-_Unsafe_Tuple_Subclas…_-_`__bool__`_-_Mixed_Length_Tuple_S…_(f24f7cc46a5a1ac8).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: unsafe_tuple_subclass.md - Unsafe Tuple Subclass - `__bool__` - Mixed Length Tuple Subclasses
mdtest path: crates/ty_python_semantic/resources/mdtest/unsafe_tuple_subclass.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import Literal
 2 | 
 3 | class A(tuple[int, *tuple[int, ...]]):
 4 |     # ok
 5 |     def __bool__(self):
 6 |         return False
 7 | 
 8 | class B(tuple[int, *tuple[int, ...]]):
 9 |     # ok
10 |     def __bool__(self) -> Literal[True]:
11 |         return True
12 | 
13 | class C(tuple[int, *tuple[int, ...]]):
14 |     # error: [unsafe-tuple-subclass]
15 |     def __bool__(self) -> bool:
16 |         return False
17 | 
18 | class D(tuple[int, *tuple[int, ...]]):
19 |     # error: [unsafe-tuple-subclass]
20 |     def __bool__(self) -> Literal[False]:
21 |         return False
22 | 
23 | class E(tuple[*tuple[int, ...], str]):
24 |     # ok
25 |     def __bool__(self):
26 |         return True
27 | 
28 | class F(tuple[*tuple[int, ...], str]):
29 |     # ok
30 |     def __bool__(self) -> Literal[True]:
31 |         return True
32 | 
33 | class G(tuple[*tuple[int, ...], str]):
34 |     # error: [unsafe-tuple-subclass]
35 |     def __bool__(self) -> bool:
36 |         return False
37 | 
38 | class H(tuple[*tuple[int, ...], str]):
39 |     # error: [unsafe-tuple-subclass]
40 |     def __bool__(self) -> Literal[False]:
41 |         return False
```

# Diagnostics

```
warning[unsafe-tuple-subclass]: Unsafe override of method `__bool__` in a subclass of `tuple`
  --> src/mdtest_snippet.py:15:9
   |
13 | class C(tuple[int, *tuple[int, ...]]):
14 |     # error: [unsafe-tuple-subclass]
15 |     def __bool__(self) -> bool:
   |         ^^^^^^^^^^^^^^^^^^^^^^
16 |         return False
   |
help: Overriding method `__bool__` in a subclass of `tuple` can cause unexpected behavior
info: Return type `bool` is inconsistent with the inherited tuple, which is expected to be always truthy
info: rule `unsafe-tuple-subclass` is enabled by default

```

```
warning[unsafe-tuple-subclass]: Unsafe override of method `__bool__` in a subclass of `tuple`
  --> src/mdtest_snippet.py:20:9
   |
18 | class D(tuple[int, *tuple[int, ...]]):
19 |     # error: [unsafe-tuple-subclass]
20 |     def __bool__(self) -> Literal[False]:
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
21 |         return False
   |
help: Overriding method `__bool__` in a subclass of `tuple` can cause unexpected behavior
info: Return type `Literal[False]` is inconsistent with the inherited tuple, which is expected to be always truthy
info: rule `unsafe-tuple-subclass` is enabled by default

```

```
warning[unsafe-tuple-subclass]: Unsafe override of method `__bool__` in a subclass of `tuple`
  --> src/mdtest_snippet.py:35:9
   |
33 | class G(tuple[*tuple[int, ...], str]):
34 |     # error: [unsafe-tuple-subclass]
35 |     def __bool__(self) -> bool:
   |         ^^^^^^^^^^^^^^^^^^^^^^
36 |         return False
   |
help: Overriding method `__bool__` in a subclass of `tuple` can cause unexpected behavior
info: Return type `bool` is inconsistent with the inherited tuple, which is expected to be always truthy
info: rule `unsafe-tuple-subclass` is enabled by default

```

```
warning[unsafe-tuple-subclass]: Unsafe override of method `__bool__` in a subclass of `tuple`
  --> src/mdtest_snippet.py:40:9
   |
38 | class H(tuple[*tuple[int, ...], str]):
39 |     # error: [unsafe-tuple-subclass]
40 |     def __bool__(self) -> Literal[False]:
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
41 |         return False
   |
help: Overriding method `__bool__` in a subclass of `tuple` can cause unexpected behavior
info: Return type `Literal[False]` is inconsistent with the inherited tuple, which is expected to be always truthy
info: rule `unsafe-tuple-subclass` is enabled by default

```
